testdata/invalid/duplicate_struct_field.hzn
package probes

type Event struct {
    pid u32
    pid u64
}
